# streamlit_app

./: ML_project_management_1.md  ML_project_management_2.md  day_5.py  pyproject.toml  self_learning_app.py
